<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="101"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:visible="false"/>

    <item
        android:id="@+id/action_update"
        android:orderInCategory="103"
        android:title="@string/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:visible="false"/>
</menu>
